updated for sql connector